# AIJiraSQL

./: .env  .replit  Dockerfile  FINAL_TEST_REPORT.md  README.md  TEST_RESULTS.md  chache  config.py  database.py  docker-compose.yml  gateway.py  jira_service.py  main.py  mock_ai_service.py  openai_service.py  packager.py  pyproject.toml  requirements.txt  run.py  test_report.md
ai_agent/: .env  Dockerfile  docker-compose.yml  main.py  mock_service.py  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  health.py  jira.py  sql_agent.py
app/core/: __init__.py  logging.py  middleware.py  security.py
app/db/: __init__.py  connection.py  models.py  repository.py
app/schemas/: __init__.py  jira.py  response.py  sql_agent.py
app/services/: __init__.py  jira_service.py  openai_service.py  sql_agent.py
app/utils/: __init__.py  exceptions.py  helpers.py
docs/: api.md  architecture.md  extensibility.md  usage.md
static/: index.html
tests/: __init__.py  conftest.py  test_jira_integration.py  test_sql_agent.py
