[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask-cors>=5.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "openai>=1.78.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
    "werkzeug>=3.1.3",
    "requests>=2.32.3",
]
